#+TITLE: Change Log
#+AUTHOR: Serghei Iakovlev

All notable changes to this project will be documented in this file.

The format is based on [[http://keepachangelog.com][Keep a Changelog]] and this project adheres to [[http://semver.org][Semantic Versioning]].

** [[https://github.com/sergeyklay/bnf-mode/compare/0.3.2...HEAD][Unreleased]]
*** Changed
- Return back =comment-start= and =comment-end= removed in [[https://github.com/sergeyklay/bnf-mode/commit/83f0e0fc144e453bcce459d2d655a7b48e77953e][83f0e0f]]

** [[https://github.com/sergeyklay/bnf-mode/compare/0.3.1...0.3.2][0.3.2]] - 2019-03-24
*** Changed
- Publish package on MELPA [[https://github.com/melpa/melpa/pull/6074][(melpa/melpa#6074)]]

*** Fixed
- In the BNF there are no strings thus treat ' and " as a regular symbols
- Minor code cleanup: removed no longer needed ~comment-*~ variables
- In the BNF there are no grouping brackets except angle ones. Fixed

*** Removed
- Removing the ~bnf-mode-version~ function. Users can easily call ~describe-package~
  or ~pkg-info-package-version~ interactively if they want to get this information [[https://github.com/sergeyklay/bnf-mode/issues/1][(#1)]]

** [[https://github.com/sergeyklay/bnf-mode/compare/0.3.0...0.3.1][0.3.1]] - 2019-03-17
*** Fixed
- Fixed BNF rule name definition to follow [[https://www.masswerk.at/algol60/report.htm][ALGOL 60 report]]

** [[https://github.com/sergeyklay/bnf-mode/compare/0.2.0...0.3.0][0.3.0]] - 2019-03-17
*** Changed
- LHS nonterminals may be preceded by an unlimited number of spaces

** [[https://github.com/sergeyklay/bnf-mode/compare/0.1.0...0.2.0][0.2.0]] - 2019-03-16
*** Changed
- Comments are no longer use syntax table.  For more see ~comment-use-syntax~

*** Fixed
- Changed comment syntax from ~#~ to ~;~ to follow [[https://tools.ietf.org/html/rfc822#section-2.8][RFC822#2.8]]

** 0.1.0 - 2019-03-16
*** Added
 - Initial stable release