@@ -6,6 +6,9 @@ All notable changes to this project will be documented in this file.
 The format is based on [[http://keepachangelog.com][Keep a Changelog]] and this project adheres to [[http://semver.org][Semantic Versioning]].
 
 ** [[https://github.com/sergeyklay/bnf-mode/compare/0.3.2...HEAD][Unreleased]]
+*** Added
+- Added =comment-start-skip= to help comment commands recognize comments
+
 *** Changed
 - Return back =comment-start= and =comment-end= removed in [[https://github.com/sergeyklay/bnf-mode/commit/83f0e0fc144e453bcce459d2d655a7b48e77953e][83f0e0f]]
 
